--- a/index.html
+++ b/index.html
@@ -1,206 +1,326 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Class_10</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <!--================================ 
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Class_09</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <!--================================ 
     header section Start
      =====================================-->
-    <header>
-      <div class="wrapper">
-        <div class="container">
-          <div class="logo">
-            <a href="#">
-              <img src="./img/Logo.png" alt="" />
-            </a>
-          </div>
-          <div class="nev_menu">
-            <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Blog</a></li>
-            </ul>
-          </div>
-          <div class="head_button">
-            <a href="">CONTACT</a>
-          </div>
+  <header>
+    <div class="wrapper">
+      <div class="container">
+        <div class="logo">
+          <a href="#">
+            <img src="./img/Logo.png" alt="" />
+          </a>
+        </div>
+        <div class="nev_menu">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Blog</a></li>
+          </ul>
+        </div>
+        <div class="head_button">
+          <a href="">CONTACT</a>
         </div>
       </div>
-    </header>
-    <!--================================ 
+    </div>
+  </header>
+  <!--================================ 
     header section end
      =====================================-->
-    <!--================================ 
+  <!--================================ 
     hiro section start
      =====================================-->
-    <section class="hiro_aria">
-      <div class="wrapper">
-        <div class="benner_d">
-          <h1>We exist since 1975 on the oil and gas industry.</h1>
-          <a href="#">LEARN MORE</a>
-        </div>
+  <section class="hiro_aria">
+    <div class="wrapper">
+      <div class="benner_d">
+        <h1>We exist since 1975 on the oil and gas industry.</h1>
+        <a href="#">LEARN MORE</a>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!--================================ 
+  <!--================================ 
     hiro section end
      =====================================-->
-    <!--================================ 
+  <!--================================ 
       Welcome section start
      =====================================-->
-    <section class="Welcome_aria">
-      <div class="wrapper">
-        <div class="container">
-          <h2>The biggest supplier on the country</h2>
-          <p>
-            It is a long established fact that a reader will be distracted by
-            the readable content of a page when looking at its layout. The point
-            of using Lorem Ipsum is that it has a more-or-less normal
-            distribution.
-          </p>
-        </div>
+  <section class="Welcome_aria">
+    <div class="wrapper">
+      <div class="container">
+        <h2>The biggest supplier on the country</h2>
+        <p>
+          It is a long established fact that a reader will be distracted by
+          the readable content of a page when looking at its layout. The point
+          of using Lorem Ipsum is that it has a more-or-less normal
+          distribution.
+        </p>
       </div>
-    </section>
-    <!--================================ 
+    </div>
+  </section>
+  <!--================================ 
    Welcome section end
    =====================================-->
-    <!--================================ 
+  <!--================================ 
       Slider IMG section start
      =====================================-->
-     <section class="Slider_IMG">
-        <div class="container">
-        <img src="./img/Slider_IMG_01.png" alt="">
-        <img src="./img/Slider_IMG_02.png" alt="">
-        <img src="./img/Slider_IMG_03.png" alt="">
-        <img src="./img/Slider_IMG_04.png" alt="">
-        </div>
-    </section>
-    <!--================================ 
+  <section class="Slider_IMG">
+    <div class="container">
+      <img src="./img/Slider_IMG_01.png" alt="">
+      <img src="./img/Slider_IMG_02.png" alt="">
+      <img src="./img/Slider_IMG_03.png" alt="">
+      <img src="./img/Slider_IMG_04.png" alt="">
+    </div>
+  </section>
+  <!--================================ 
    Slider IMG section end
    =====================================-->
 
-     <!--================================ 
+  <!--================================ 
       Services section start
      =====================================-->
-     <section class="Services">
-     <div class="container">
-    <div class="Services_one">
-      <div class="pd_r">
-      <h2>Our Services</h2>
-      <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-    </div>
-    </div>
-    <div class="Services_two">
-      <div class="overlay">
-        <div>
-          <h2>Modern natural oil and gas refineries.</h2>
-        <a href="">Learn More</a>
+  <section class="Services">
+    <div class="container">
+      <div class="Services_one">
+        <div class="pd_r">
+          <h2>Our Services</h2>
+          <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+            looking at its layout.</p>
+        </div>
       </div>
+      <div class="Services_two">
+        <div class="overlay">
+          <div>
+            <h2>Modern natural oil and gas refineries.</h2>
+            <a href="">Learn More</a>
+          </div>
+        </div>
       </div>
     </div>
-     </div>
-     <div class="container">
+    <div class="container">
       <div class="Services_three">
         <div class="overlay">
           <div>
             <h2>Supply of national industries.</h2>
-          <a href="">Learn More</a>
-        </div>
+            <a href="">Learn More</a>
+          </div>
         </div>
       </div>
       <div class="Services_four">
         <div class="overlay">
           <div>
             <h2>National fuel distribution and supply.</h2>
-          <a href="">Learn More</a>
-        </div>
+            <a href="">Learn More</a>
+          </div>
         </div>
       </div>
-       </div>
-      </div>
+    </div>
+    </div>
   </section>
   <!--================================ 
              Services section end
  =====================================-->
-   <!--================================ 
+  <!--================================ 
                 About section start
      =====================================-->
-     <section class="About">
-      <div class="wrapper">
-     <div class="About_img">
-      <div class="overlay">
+  <section class="About">
+    <div class="wrapper">
+      <div class="About_img">
+        <div class="overlay">
           <h2>Learn more about our company</h2>
+        </div>
+        <a href="">Learn More</a>
       </div>
-      <a href="">Learn More</a>
-     </div>
-       </div>
-   </section>
-   <!--================================ 
+    </div>
+  </section>
+  <!--================================ 
               About section end
   =====================================-->
   <!--================================ 
                 sponsor section start
      =====================================-->
-     <section class="sponsor">
-      <div class="wrapper">
-     <div class="container">
-     <img src="./img/sponsor_img_01.png" alt="">
-     <img src="./img/sponsor_img_02.png" alt="">
-     <img src="./img/sponsor_img_03.png" alt="">
-     <img src="./img/sponsor_img_04.png" alt="">
-     </div>
-       </div>
-   </section>
-   <!--================================ 
+  <section class="sponsor">
+    <div class="wrapper">
+      <div class="container">
+        <img src="./img/sponsor_img_01.png" alt="">
+        <img src="./img/sponsor_img_02.png" alt="">
+        <img src="./img/sponsor_img_03.png" alt="">
+        <img src="./img/sponsor_img_04.png" alt="">
+      </div>
+    </div>
+  </section>
+  <!--================================ 
              sponsor section end
   =====================================-->
-    <!--================================ 
+  <!--================================ 
                 Blog section start
      =====================================-->
-     <section class="Blog">
-      <div class="wrapper">
-     <div class="container">
-     <div class="Blog_img_one">
-      <div class="overlay">
-        <div>
-       <h2>lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod.</h2>
-      <a href="">Read more</a>
+  <section class="Blog">
+    <div class="wrapper">
+      <div class="container">
+        <div class="Blog_img_one">
+          <div class="overlay">
+            <div>
+              <h2>lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod.</h2>
+              <a href="">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="Blog_img_two">
+          <div class="overlay">
+            <div>
+              <h2>lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod.</h2>
+              <a href="">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="Blog_img_three">
+          <div class="overlay">
+            <div>
+              <h2>lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod.</h2>
+              <a href="">Read more</a>
+            </div>
+          </div>
+        </div>
       </div>
-      </div>
-     </div>
-     <div class="Blog_img_two">
-      <div class="overlay">
-        <div>
-          <h2>lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod.</h2>
-          <a href="">Read more</a>
-         </div>
-      </div>
-     </div>
-     <div class="Blog_img_three">
-      <div class="overlay">
-        <div>
-          <h2>lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod.</h2>
-          <a href="">Read more</a>
-         </div>
-      </div>
-     </div>
-     </div>
-       </div>
-   </section>
-   <!--================================ 
+    </div>
+  </section>
+  <!--================================ 
             Blog section end
   =====================================-->
-  </body>
+  <!--================================ 
+            map section atart
+  =====================================-->
+  <section class="map">
+    <!-- Image Map-->
+    <img src="./img/Maps.png" usemap="#image-map">
+    <map name="image-map">
+      <area target="_blank" alt="petrol " title="petrol "
+        href="https://www.google.com/maps/place/Australia/@-23.7088613,133.7279325,11z/data=!4m6!3m5!1s0x2b2bfd076787c5df:0x538267a1955b1352!8m2!3d-25.274398!4d133.775136!16zL20vMGNoZ2h5?entry=ttu&amp;g_ep=EgoyMDI0MTAwOS4wIKXMDSoASAFQAw%3D%3D"
+        coords="178,258,175,219,156,8,1617,3,1822,438,971,448,866,448,717,450,215,450,185,297" shape="poly">
+    </map>
+  </section>
+  <!--================================ 
+            map section end
+  =====================================-->
+  <!--================================
+  contact section start
+  =====================================-->
+  <section class="contact">
+    <div class="wrapper">
+      <div class="container">
+        <div class="contact_one">
+          <h2>Want to join as member branch in your area?</h2>
+        </div>
+        <div class="contact_buttton">
+          <a href="#">CONTACT</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--================================
+  footer section start
+  =====================================-->
+  <footer class="footer">
+    <div class="wrapper">
+      <div class="container">
+        <div class="footer_one">
+          <div class="container">
+            <div class="fooder_logo">
+              <img src="./img/LogoI_fodder.png" alt="LogoI_fodder">
+            </div>
+            <div>
+              <img src="./img/Vector.png" alt="">
+              <span>mail@yourcompany.com</span>
+            </div>
+            <div class="footer_social">
+              <img src="./img/carbon_phone-voice.png" alt="">
+              <span>+896 120 5889 (Toll free)</span>
+            </div>
+            <div>
+              <img src="./img/carbon_map.png" alt="">
+              <span>101 Baker Street, New York, USA, 12345</span>
+            </div>
+            <div class="footer_social_icon">
+              <a href=""><img src="./img/Facebook.png" alt=""></a>
+              <a href=""><img src="./img/Twitter.png" alt=""></a>
+              <a href=""><img src="./img/Linkedin.png" alt=""></a>
+              <a href=""><img src="./img/Instagram.png" alt=""></a>
+            </div>
+          </div>
+        </div>
+        <div class="footer_two">
+          <div class="container">
+            <div>
+              <h3>Company</h3>
+            </div>
+            <div>
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Gallery</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer_two">
+          <div class="container">
+            <div>
+              <h3>Others</h3>
+            </div>
+            <div>
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Gallery</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer_two">
+          <div class="container">
+            <div>
+              <h3>Certificate</h3>
+            </div>
+            <div>
+              <img src="./img/Cert1.png" alt="">
+              <img src="./img/Cert2.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </footer>
+  <!--================================
+             footer section end
+  =====================================-->
+  <!--================================
+  copyright section start
+  =====================================-->
+  <section class="copyright">
+    <p>© Copyright 2022 by AltDesain Studio – All right reserved.</p>
+  </section>
+  <!--================================
+  copyright section end
+  =====================================-->
+</body>
 </html>
